// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator snapshots > 'express-auth' folder tree and key files match the snapshot 1`] = `
{
  "keyFiles": {
    "prisma.config.ts": "import "dotenv/config";
import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});",
    "prisma/schema.prisma": "generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  role      Role     @default(USER)
  verified  Boolean  @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  sessions  Session[]
}

model Session {
  id           String   @id @default(uuid())
  userId       String
  refreshToken String   @unique
  expiresAt    DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
}

enum Role {
  USER
  ADMIN
}",
    "src/app.ts": "import  express from "express";
import { createAuthRoutes } from "./routes/auth.routes";
import { createProtectedRoutes } from "./routes/protected.routes";

export const createApp = (auth: any) => {
  const app = express();

  app.use(express.json({ limit: "16kb", strict: true }));

  app.use(auth.helmet);
  app.use(auth.rateLimit);

  app.get("/.well-known/jwks.json", (_req, res) => res.json(auth.getJwks()));

  app.use("/auth", createAuthRoutes(auth));
  app.use("/", createProtectedRoutes(auth));

  return app;
};",
    "src/controllers/auth.controller.ts": "import { Request, Response } from "express";
import { AuthService } from "../services/auth.services";
import { parseCredentials, parseRefreshToken } from "../utils/security";

export const createAuthController = (auth: any) => ({
  async register(req: Request, res: Response) {
    try {
      const { email, password } = parseCredentials(req.body);

      const user = await AuthService.register(email, password);

      res.json({ message: "User created", userId: user.id });
    } catch (err) {
      res.status(400).json({ error: (err as Error).message || "Invalid registration request" });
    }
  },

  async login(req: Request, res: Response) {
    try {
      const { email, password } = parseCredentials(req.body);

      const user = await AuthService.login(email, password);

      const { accessToken, refreshToken } = await auth.issueTokens({
        userId: user.id,
        email: user.email,
        role: String(user.role).toLowerCase(),
      });

      res.json({ accessToken, refreshToken });
    } catch {
      res.status(401).json({ error: "Invalid credentials" });
    }
  },

  async refresh(req: Request, res: Response) {
    try {
      const refreshToken = parseRefreshToken(req.body);
      const tokens = await auth.refreshToken(refreshToken);
      res.json(tokens);
    } catch {
      res.status(401).json({ error: "Invalid refresh token" });
    }
  },
});",
    "src/controllers/protected.controller.ts": "import { Request, Response } from "express";
import {
  InputValidationError,
  parseIdentifier,
  sanitizeSessionResponse,
} from "../utils/security";

function sessionError(res: Response, error: unknown, fallback: string) {
  if (error instanceof InputValidationError) {
    return res.status(400).json({ success: false, message: error.message });
  }
  return res.status(500).json({ success: false, message: fallback });
}

export const createProtectedController = () => ({
  protected(req: Request, res: Response) {
    res.json({ message: "Protected route" });
  },

  async listSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      const userId = parseIdentifier(req.params.userId, "User ID");
      const sessions = await actions.listSessions(userId);
      res.json({ sessions: sanitizeSessionResponse(sessions) });
    } catch (error) {
      sessionError(res, error, "Failed to retrieve sessions");
    }
  },

  async revokeSession(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      const userId = parseIdentifier(req.params.userId, "User ID");
      const sessionId = parseIdentifier(req.params.sessionId, "Session ID");
      await actions.revokeSession(userId, sessionId);
      res.json({ success: true, message: "Session revoked" });
    } catch (error) {
      sessionError(res, error, "Failed to revoke session");
    }
  },

  async revokeAllSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      const userId = parseIdentifier(req.params.userId, "User ID");
      await actions.revokeAllSessions(userId);
      res.json({ success: true, message: "All sessions revoked" });
    } catch (error) {
      sessionError(res, error, "Failed to revoke sessions");
    }
  },
});",
    "src/prisma/client.ts": "import "dotenv/config";
import { PrismaPg } from "@prisma/adapter-pg";
import { PrismaClient } from "@prisma/client";

const globalForPrisma = globalThis as unknown as {
  prisma: PrismaClient | undefined;
};

const databaseUrl = process.env.DATABASE_URL;
if (!databaseUrl) throw new Error("DATABASE_URL is required");

const adapter = new PrismaPg({ connectionString: databaseUrl });
export const prisma = globalForPrisma.prisma ?? new PrismaClient({ adapter });

if (process.env.NODE_ENV !== "production") {
  globalForPrisma.prisma = prisma;
}",
    "src/routes/auth.routes.ts": "import { Router } from "express";
import { createAuthController } from "../controllers/auth.controller";

export const createAuthRoutes = (auth: any) => {
  const router = Router();
  const controller = createAuthController(auth);

  router.post("/register", controller.register);
  router.post("/login", controller.login);
  router.post("/refresh", controller.refresh);

  return router;
};",
    "src/routes/protected.routes.ts": "import { Router } from "express";
import { createProtectedController } from "../controllers/protected.controller";
import { createAuthMiddleware } from "../middleware/auth.middleware";

export const createProtectedRoutes = (auth: any) => {
  const router = Router();
  const controller = createProtectedController();
  const requireAuth = createAuthMiddleware(auth);

  router.get("/protected", requireAuth, controller.protected);
  router.get("/admin/sessions/:userId", auth.requireAdmin, controller.listSessions);
  router.delete("/admin/sessions/:userId/:sessionId", auth.requireAdmin, controller.revokeSession);
  router.delete("/admin/sessions/:userId", auth.requireAdmin, controller.revokeAllSessions);

  return router;
};",
    "src/utils/hash.ts": "import bcrypt from "bcryptjs";

export const hashPassword = (password: string) => {
return bcrypt.hash(password, 10);
};

export const comparePassword = (password: string, hash: string) => {
return bcrypt.compare(password, hash);
};",
  },
  "template": "auth",
  "tree": [
    ".gitignore",
    "AGENT_IDENTITY.md",
    "README.md",
    "THREAT_MODEL.md",
    "authenik8.json",
    "docker-compose.yml",
    "package.json",
    "prisma.config.ts",
    "prisma/",
    "prisma/schema.prisma",
    "src/",
    "src/app.ts",
    "src/config/",
    "src/config/redis.ts",
    "src/controllers/",
    "src/controllers/auth.controller.ts",
    "src/controllers/protected.controller.ts",
    "src/middleware/",
    "src/middleware/auth.middleware.ts",
    "src/prisma/",
    "src/prisma/client.ts",
    "src/routes/",
    "src/routes/auth.routes.ts",
    "src/routes/protected.routes.ts",
    "src/server.ts",
    "src/services/",
    "src/services/auth.services.ts",
    "src/utils/",
    "src/utils/hash.ts",
    "src/utils/security.ts",
    "tsconfig.json",
  ],
}
`;

exports[`generator snapshots > 'express-base' folder tree and key files match the snapshot 1`] = `
{
  "keyFiles": {
    "app.ts": "import  express  from "express";
import { createBaseRoutes } from "./routes/base.routes";

export const createApp = (auth: any) => {
  const app = express();

  app.use(express.json({ limit: "16kb", strict: true }));

  app.use(auth.helmet);
  app.use(auth.rateLimit);

  app.get("/.well-known/jwks.json", (_req, res) => res.json(auth.getJwks()));

  app.use("/", createBaseRoutes(auth));

  return app;
};",
    "controllers/base.controller.ts": "import { Request, Response } from "express";
import {
  InputValidationError,
  parseIdentifier,
  parseRefreshToken,
  sanitizeSessionResponse,
} from "../utils/security";

export const createBaseController = (auth: any) => ({
  publicRoute(req: Request, res: Response) {
    res.json({ message: "Public route" });
  },

  async guest(req: Request, res: Response) {
    const token = await auth.guestToken({ role: "guest" });
    res.json({ token });
  },

  protected(req: Request, res: Response) {
    res.json({ message: "Protected data", user: (req as any).user });
  },

  async refresh(req: Request, res: Response) {
    try {
      const refreshToken = parseRefreshToken(req.body);
      const tokens = await auth.refreshToken(refreshToken);
      res.json(tokens);
    } catch {
      res.status(401).json({ error: "Invalid refresh token" });
    }
  },

  admin(req: Request, res: Response) {
    res.json({ message: "Admin only" });
  },

  async listSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      const userId = parseIdentifier(req.params.userId, "User ID");
      const sessions = await actions.listSessions(userId);
      res.json({ sessions: sanitizeSessionResponse(sessions) });
    } catch (error) {
      const validationError = error instanceof InputValidationError;
      res.status(validationError ? 400 : 500).json({
        success: false,
        message: validationError ? error.message : "Failed to retrieve sessions",
      });
    }
  },

  async revokeSession(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      const userId = parseIdentifier(req.params.userId, "User ID");
      const sessionId = parseIdentifier(req.params.sessionId, "Session ID");
      await actions.revokeSession(userId, sessionId);
      res.json({ success: true, message: "Session revoked" });
    } catch (error) {
      const validationError = error instanceof InputValidationError;
      res.status(validationError ? 400 : 500).json({
        success: false,
        message: validationError ? error.message : "Failed to revoke session",
      });
    }
  },

  async revokeAllSessions(req: Request, res: Response) {
    try {
      const actions = (req as any).adminActions;
      if (!actions) {
        return res.status(503).json({ success: false, message: "Session management unavailable" });
      }

      const userId = parseIdentifier(req.params.userId, "User ID");
      await actions.revokeAllSessions(userId);
      res.json({ success: true, message: "All sessions revoked" });
    } catch (error) {
      const validationError = error instanceof InputValidationError;
      res.status(validationError ? 400 : 500).json({
        success: false,
        message: validationError ? error.message : "Failed to revoke sessions",
      });
    }
  },
});",
    "prisma.config.ts": "import "dotenv/config";
import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});",
    "prisma/schema.prisma": "generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  role      String     @default("USER")
  verified  Boolean  @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  sessions  Session[]
}

model Session {
  id           String   @id @default(uuid())
  userId       String
  refreshToken String   @unique
  expiresAt    DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
}",
    "routes/base.routes.ts": "import { Router } from "express";
import { createBaseController } from "../controllers/base.controller";

export const createBaseRoutes = (auth: any) => {
  const router = Router();
  const controller = createBaseController(auth);

  router.get("/public", controller.publicRoute);
  router.get("/guest", controller.guest);
  router.get("/protected", auth.requireAuth, controller.protected);
  router.post("/refresh", controller.refresh);

  router.get("/admin", auth.requireAdmin, controller.admin);
  router.get("/admin/sessions/:userId", auth.requireAdmin, controller.listSessions);
  router.delete("/admin/sessions/:userId/:sessionId", auth.requireAdmin, controller.revokeSession);
  router.delete("/admin/sessions/:userId", auth.requireAdmin, controller.revokeAllSessions);

  return router;
};",
    "src/prisma/client.ts": "import "dotenv/config";
<<<<<<< HEAD
import { PrismaLibSql } from "@prisma/adapter-libsql";
=======
import { PrismaBetterSqlite3 } from "@prisma/adapter-better-sqlite3";
>>>>>>> main
import { PrismaClient } from "@prisma/client";

const globalForPrisma = globalThis as unknown as {
  prisma: PrismaClient | undefined;
};

<<<<<<< HEAD
const adapter = new PrismaLibSql({
=======
const adapter = new PrismaBetterSqlite3({
>>>>>>> main
  url: process.env.DATABASE_URL ?? "file:./dev.db",
});
export const prisma = globalForPrisma.prisma ?? new PrismaClient({ adapter });

if (process.env.NODE_ENV !== "production") {
  globalForPrisma.prisma = prisma;
}",
    "src/server.ts": "import  dotenv  from "dotenv";
import { createAuthenik8 } from "authenik8-core";
import { createApp } from "../app";
<<<<<<< HEAD
import { createRedisClient } from "./config/redis";
=======
>>>>>>> main
import { agentIdentityConfig, authJwkConfig, requiredPort, requiredSecret } from "../utils/security";

dotenv.config();

async function start() {
  const auth = await createAuthenik8({
    jwt: authJwkConfig(),
    refreshSecret: requiredSecret("REFRESH_SECRET"),
    agent: agentIdentityConfig(),
<<<<<<< HEAD
    redis: await createRedisClient(),
=======
>>>>>>> main
  });

  const app = createApp(auth);

  const port = requiredPort();
  app.listen(port, () => {
    console.log(\`🚀 Server running on http://localhost:\${port}\`);
  });
}
process.on("uncaughtException", (err) => {
  console.error(" Uncaught Exception:", err);
  process.exit(1);
});

process.on("unhandledRejection", (err) => {
  console.error(" Unhandled Rejection:", err);
  process.exit(1);
});
start();",
  },
  "template": "base",
  "tree": [
    ".gitignore",
    "AGENT_IDENTITY.md",
    "README.md",
    "THREAT_MODEL.md",
    "app.ts",
    "authenik8.json",
    "controllers/",
    "controllers/base.controller.ts",
    "docker-compose.yml",
    "package.json",
    "prisma.config.ts",
    "prisma/",
    "prisma/schema.prisma",
    "routes/",
    "routes/base.routes.ts",
    "src/",
<<<<<<< HEAD
    "src/config/",
    "src/config/redis.ts",
=======
>>>>>>> main
    "src/prisma/",
    "src/prisma/client.ts",
    "src/server.ts",
    "tsconfig.json",
    "utils/",
    "utils/security.ts",
  ],
}
`;
